<resources>
    <string name="settings">Settings</string>
    <string name="RarPassword">RAR Password</string>
    <string name="DefaultRarPassword">Set the default RAR password</string>
    <string name="SaveRarPassword">Save</string>
    <string name="InsuranceNumber">Insuree number</string>
    <string name="ErrorOccurred">Error occurred while processing data</string>
    <string name="SomethingWrongServer">Something went wrong on the server.</string>
    <string name="Version">Version</string>
    <string name="ReleaseDate">Release Date</string>
    <string name="clear">Clear</string>
    <string name="has_no_rights">Not authorized</string>
    <string name="title_activity_claim_review">ClaimReview</string>
    <string name="ClaimReview">Claim Review</string>
    <string name="claims">Claims</string>
    <string name="claim">Claim</string>
    <string name="Restore">Restore</string>
    <string name="Entered">Entered</string>
    <string name="Checked">Checked</string>
    <string name="Processed">Processed</string>
    <string name="Valuated">Valuated</string>
    <string name="Rejected">Rejected</string>
    <string name="SearchClaims">Search Claims</string>
    <string name="getClaims">Get Claims</string>
    <string name="visit_date_from">Visit Date From</string>
    <string name="visit_date_to">Visit Date To</string>
    <string name="date_processed_from">Date Processed</string>
    <string name="date_processed_to">Processed To</string>
    <string name="search">Search</string>
    <string name="HealthFacilityName">Health Facility Name</string>
    <string name="InsureeNumber">Insurance Number</string>
    <string name="date_claimed">Date Claimed</string>
    <string name="PatientName">Patient Name</string>
    <string name="MainDg">Main Dg</string>
    <string name="SecDg1">Sec. Dg. 1</string>
    <string name="SecDg2">Sec. Dg. 2</string>
    <string name="SecDg3">Sec. Dg. 3</string>
    <string name="SecDg4">Sec. Dg. 4</string>
    <string name="Claimed">Claimed</string>
    <string name="Approved">Approved</string>
    <string name="Adjusted">Adjusted</string>
    <string name="ClaimStatus">Claim Status</string>
    <string name="Explanation">Explanation</string>
    <string name="Adjustment">Adjustment</string>
    <string name="ItemCode">Item Code</string>
    <string name="ItemName">Item Name</string>
    <string name="AppQty">App. Qty</string>
    <string name="AppPrice">App. Price</string>
    <string name="Justification">Justification</string>
    <string name="Status">Status</string>
    <string name="Result">Result</string>
    <string name="ServiceCode">Service Code</string>
    <string name="ServiceName">Service Name</string>
    <string name="retrieve">Retrieve</string>
    <string name="totalAdmissionsLeft">TotalAdmissionsLeft</string>
    <string name="totalVisitsLeft">TotalVisitsLeft</string>
    <string name="totalConsultationsLeft">TotalConsultationsLeft</string>
    <string name="totalSurgeriesLeft">TotalSurgeriesLeft</string>
    <string name="totalDeliveriesLeft">TotalDeliveriesLeft</string>
    <string name="totalAntenatalLeft">TotalAntenatalLeft</string>
    <string name="consultationAmountLeft">ConsultationAmountLeft</string>
    <string name="surgeryAmountLeft">SurgeryAmountLeft</string>
    <string name="hospitalizationAmountLeft">HospitalizationAmountLeft</string>
    <string name="antenatalAmountLeft">AntenatalAmountLeft</string>
    <string name="deliveryAmountLeft">DeliveryAmountLeft</string>
    <string name="noControls">No controls data found.</string>
    <string name="noAdmins">No administrators data found.</string>
    <string name="provideExtractOrInternet">Provide phone extract or connect the phone to the internet.</string>
    <string name="restoredClaimNoPrefix">\@</string>
    <string name="SDCardReadOnly">SD Card is set to read only mode. Please set the mode to read/write and restart the application.</string>
    <string name="SDCardMissing">Application needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="ForceClose">Force Close</string>
    <string name="OfflineMode">Offline Mode</string>
    <string name="GuaranteeNo">Guarantee No</string>
    <string name="ContentTitle">New release of Claim Management is now available.</string>
    <string name="ContentText">Click here to download.</string>
    <string name="SomethingWentWrongServer">Something went wrong on the server.</string>
    <string name="app_name_claim">Claim</string>
    <string name="app_name_preauthorization">PreAuthorization</string>
    <string name="hint_claim_preauthorization">Claim PreAuthorization</string>
    <string name="no_pre_auth_to_sync">No pre-authorization found to synchronize</string>
    <string name="error_delete_pre_auth">Error while deleting the PreAuth</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_prescriber">Prescriber</string>
    <string name="upload_pre_auth">Upload PreAuthorization</string>
    <string name="app_name_enquire">Enquire</string>
    <string name="ClaimAdmin">Claim Admin</string>
    <string name="CHFID">Code AMG</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Diagnosis1">Diagnosis 1</string>
    <string name="Diagnosis2">Diagnosis 2</string>
    <string name="Diagnosis3">Diagnosis 3</string>
    <string name="Diagnosis4">Diagnosis 4</string>
    <string name="VisitType">Visit Type</string>
    <string name="Quantity">Quantity</string>
    <string name="Amount">Amount</string>
    <string name="Price">Price</string>
    <string name="SelectItem">Please select an item</string>
    <string name="SelectService">Please select a service</string>
    <string name="Add">Add +</string>
    <string name="HealthFacility">Health Facility Code</string>
    <string name="ClaimCode">Claim Code</string>
    <string name="Scan">Scan</string>
    <string name="Item">Item</string>
    <string name="Service">Service</string>
    <string name="MissingHealthFacility">Please enter Health Facility Code</string>
    <string name="MissingClaimAdmin">Please enter Claim Admin Code</string>
    <string name="MissingGuaranteeNo">Please enter Guarantee No</string>
    <string name="MissingClaimCode">Please enter Claim Code</string>
    <string name="MissingCHFID">Please enter the AMG code</string>
    <string name="InvalidCHFID">Invalid AMG code</string>
    <string name="MissingStartDate">Please enter Start Date</string>
    <string name="MissingEndDate">Please enter End Date</string>
    <string name="MissingClaim">Please select at least one item or service to submit the claim.</string>
    <string name="MissingDisease">Please select diagnose.</string>
    <string name="BiggerDate">End date cannot be smaller than the Start date.</string>
    <string name="AfterCurrentDate">End date cannot be later than the current date.</string>
    <string name="Ok">OK</string>
    <string name="ClaimPosted">Claim is posted successfully.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ConfirmDiscard">There is an unsaved claim. Do you want to discard and start new claim?</string>
    <string name="Uploading">Uploading…</string>
    <string name="UploadAllClaims">Upload Claims</string>
    <string name="NoClaim">No claim found.</string>
    <string name="CheckInternet">Internet is required to communicate with the server.</string>
    <string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folder to verify the server response.</string>
    <string name="MapItems">Map Items</string>
    <string name="MapServices">Map Services</string>
    <string name="Saving">Saving…</string>
    <string name="Emergency">Emergency</string>
    <string name="Referral">Referral</string>
    <string name="Treatment">In Treatment</string>
    <string name="Other">Other</string>
    <string name="MissingVisitType">Please select visit type.</string>
    <string name="New">New Claim</string>
    <string name="Save">Post Claim</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="AddItems">Add Items</string>
    <string name="AddServices">Add Services</string>
    <string name="CheckUncheck">Check/Uncheck All</string>
    <string name="SaveMap">Save</string>
    <string name="SearchItems">Search Items</string>
    <string name="SearchServices">Search Services</string>
    <string name="NoStatFound">No data found</string>
    <string name="InProgress">In Progress…</string>
    <string name="InternetRequired">Internet connection is required.</string>
    <string name="title_activity_enquire">Enquire.</string>
    <string name="InsureeName">Name</string>
    <string name="Gender">Gender</string>
    <string name="DOB">DOB</string>
    <string name="GetingInsuuree">Getting insuree info…</string>
    <string name="RecordNotFound">Member with this Insurance No. does not exist.</string>
    <string name="family_members">Membres de la famille</string>
    <string name="member_photo">Photo du membre</string>
    <string name="change_language">Change Language</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="MemoryFull">Your phone memory is full please free some space and try again.</string>
    <string name="SelectItems">Please check items to map before saving</string>
    <string name="Login">Login</string>
    <string name="user_name">User Name</string>
    <string name="Password">Password</string>
    <string name="synchronize">Synchronize</string>
    <string name="ZipAllClaims">Create Claims XML</string>
    <string name="reports">Reports</string>
    <string name="map_items">Map Items</string>
    <string name="map_services">Map Services</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="Enter_Credentials">Please enter user name and password</string>
    <string name="Login_Successful">Login Successful</string>
    <string name="LoginFail">Login Failed</string>
    <string name="dashboard">Dashboard</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="title_activity_report">Report</string>
    <string name="ZipXMLCreated">Zipped XML file Created Successfully</string>
    <string name="AreYouSure">Are you sure you want to continue?</string>
    <string name="Continue">Continue</string>
    <string name="accepted_claims">Accepted Claims</string>
    <string name="rejected_claims">Rejected Claims</string>
    <string name="pending_claims">Pending Claims</string>
    <string name="code">code</string>
    <string name="release">Version: 2.0.0, Released: November 2019</string>
    <string name="refresh_mapping">Refresh Mapping</string>
    <string name="DownLoad">Downloading</string>
    <string name="Diagnoses">Diagnoses</string>
    <string name="Services">Services</string>
    <string name="Items">Items</string>
    <string name="MapSuccessful">Map Services and items successfully</string>
    <string name="getControls">Get Controls…</string>
    <string name="Checking_For_Updates">Checking For Updates</string>
    <string name="Select_Language">Select Language</string>
    <string name="AccessDenied">Access Denied</string>
    <string name="installed_updates">Data downloaded successfully</string>
    <string name="mapping">Mapping</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="getMasterData">Download Master Data</string>
    <string name="invalid_code">Invalid Claim Code</string>
    <string name="initializing">Initializing…</string>
</resources>